--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,10 @@
-<h1>Welcome to the Card Printer!</h1>
+<div id="acolumn">
+    <h1>Welcome to the Card Printer!</h1>
 
-<p>First, press the pink button to read the spreadsheet.</p>
-<p>Second, pick which cards you would like to print.</p>
-<p>Third, press the blue button.</p>
-
+    <p>First, press the pink button to read the spreadsheet.</p>
+    <p>Second, pick which cards you would like to print.</p>
+    <p>Third, press the blue button.</p>
+</div>
 <div class='button-bunch'>
     <div class='lk-button readss'>
         <p class='button-text'>
